--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.14.2"
+    "koa": "^2.14.2",
+    "koa-router": "^12.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
