--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^4.14.1",
     "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.0",
     "koa-router": "^12.0.0"
   },
   "devDependencies": {
